Fix topnav spacing issues for lower breakpoints

--- a/css/style.css
+++ b/css/style.css
@@ -11,7 +11,7 @@
 }
 
 
-/* colors */  
+/* colors */
 
 .color-oxford {
   background-color: #0D203F;
@@ -28,7 +28,7 @@
 
 main {
   margin:0 auto;
-  padding:40px;
+  padding:20px;
   }
 
 
@@ -123,6 +123,7 @@ body {
   font-size: 14px;
   line-height: 24px;
   font-weight: 500;
+  text-align: center;
   -webkit-font-smoothing: antialiased;
   transition: background-color 1s ease;
   -webkit-animation: fadeIn 2000ms;
@@ -167,24 +168,29 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 h1 {
-  font-size: 72px;
+  font-size: 66px;
   color: #0D203F;
-  line-height: 80px;
+  line-height: 72px;
   font-weight: 800;
   }
 @media (max-width: 1200px) {
 h1 {
-    font-size: 40px;
+    font-size: 44px;
     line-height: 52px;
-    padding:0px 24px;
      }
   }
 @media (max-width: 767px) {
 h1 {
-    font-size: 36px;
-    line-height: 48px;
+    font-size: 34px;
+    line-height: 44px;
      }
   }
+@media (max-width: 600px) {
+  h1 {
+      font-size: 28px;
+      line-height: 36px;
+       }
+    }
 
 h2 {
   font-size: 44px;
@@ -226,7 +232,7 @@ h5 {
 }
 
 h5.overline {
-  text-align: left;
+  text-align: center;
 }
 
 
@@ -251,22 +257,10 @@ h5.overline {
 
 
 .section-title {
+margin:0 auto;
 margin-top: 120px;
 margin-bottom: 120px;
-width: 72%;
-}
-@media (max-width:1200px) {
-  .section-title {
-    width:88%;
-  }
-}
-
-@media (max-width:767px) {
-  .section-title h2 {
-    font-size: 32px;
-    line-height: 40px;
-    width: 100%;
-  }
+max-width: 1240px;
 }
 
 
@@ -486,7 +480,7 @@ span {
 
 .section-title span {
   color:#00B0ED;
-} 
+}
 
 span.dot {
     color:#00B0ED;
@@ -618,16 +612,16 @@ span.dot {
 
 .flex-container {
   display: flex;
-  flex-flow: wrap;
-  justify-content: start;
+  flex-flow: wrap ;
+  justify-content: center;
 }
 
 .thumbs {
   position: relative;
   top:0px;
   width: 33%;
-  padding:20px;
   transition: .3s ease-in-out;
+  padding:20px;
 }
 
 @media (max-width: 992px) {
@@ -639,7 +633,6 @@ span.dot {
 @media (max-width: 600px) {
   .thumbs {
   width: 100%;
-  padding: 0px;
      }
 }
 
@@ -816,12 +809,19 @@ input[type=submit]:hover {
 
 
 
-
+nav {
+  padding:0px 24px;
+  border-bottom: 1px solid rgba(0, 0, 0, .12);
+}
+@media (max-width:992px) {
+  nav {
+    padding:0px 12px;
+  }
+}
 
 /* Style the header with a grey background and some padding */
 .header {
   overflow: hidden;
-  border-bottom: 1px solid rgba(0, 0, 0, .12);
 }
 
 /* Style the header links */
@@ -830,16 +830,16 @@ input[type=submit]:hover {
   color: #0D203F;
   text-align: center;
   text-decoration: none;
-  font-size: 14px; 
+  font-size: 14px;
   line-height: 24px;
-  padding:32px 40px;
+  padding:24px;
 }
-
-
-/* Style the logo link (notice that we set the same value of line-height and font-size to prevent the header to increase when the font gets bigger */
-/* .header a.logo {
-  padding-left:0px;
-} */
+@media (max-width:992px) {
+  .header a {
+    padding-left:12px;
+    padding-right:12px;
+  }
+}
 
 /* Change the background color on mouse-over */
 .header a:hover {
@@ -856,8 +856,8 @@ input[type=submit]:hover {
   float: right;
 }
 
-/* When the screen is less than 767 pixels wide, hide all links, except for the Logo. Show the link that contains should open and close the header */
-@media screen and (max-width: 767px) {
+/* When the screen is less than 992 pixels wide, hide all links, except for the Logo. Show the link that contains should open and close the header */
+@media screen and (max-width: 992px) {
   .header a:not(.logo) {display: none;}
   .header a.icon {
     float: right;
@@ -867,7 +867,7 @@ input[type=submit]:hover {
 
 
 /* The "responsive" class is added to the header with JavaScript when the user clicks on the icon. This class makes the header look good on small screens (display the links vertically instead of horizontally) */
-@media screen and (max-width: 767px) {
+@media screen and (max-width: 992px) {
   .header.responsive {position: relative;}
   .header.responsive a.icon {
     position: absolute;
